Agregado fontawesone terminado el index detalles como imagenes para despues agregado login.html-> terminado agregado registro html -> incompleto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="fontawesone/all.css">
     <title>Sisteam Examenes</title>
 </head>
 <body>
@@ -14,25 +15,25 @@
     <header class="header">
         <nav class="navbar navbar-expand-lg navbar-dark bg-success d-flex justify-content-between ">
             <div class="d-flex justify-content-start">
-                <img src="img/Logo/prueba.png" class="img-fluid" alt="Imagen fake">
-                <a href="#" class="navbar-brand">Sistema Examenes</a>
+                <img src="img/Logo/prueba.png" class="img-fluid mr-2" alt="Imagen fake">
+                <a href="index.html" class="navbar-brand">Sistema Examenes</a>
             </div>
 
             <div class="nav justify-content-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a href="#" class="nav-link"><span class="text-white">Inicio</span></a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><span class="text-white">Como Funciona</span></span></a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><span class="text-white">Nosotros</span></a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link"><span class="text-white">Inicio</span></a></li>
+                    <li class="nav-item"><a href="#como-funciona" class="nav-link"><span class="text-white">Como Funciona</span></span></a></li>
+                    <li class="nav-item"><a href="#nosotros" class="nav-link"><span class="text-white">Nosotros</span></a></li>
                     <li class="nav-item"><a href="#" class="nav-link"><span class="text-white">Contactanos</span></a></li>
                 </ul>
             </div>
             <div class="justify-content-end">
-                <a href="#" class="navbar-brand">Inicio de Sesion</a>
-                <button class="btn btn-primary"><a href="#" class="align-content-center "><span class="text-white">Registro</span></a></button>
+                <a href="login.html" class="navbar-brand">Inicio de Sesion</a>
+                <button class="btn btn-primary"><a href="registro.html" class="align-content-center "><span class="text-white">Registro</span></a></button>
             </div>
         </nav>
     </header>
-    <main class="contenido">
+    <div class="contenido">
         <div class="slider">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators ">
@@ -44,21 +45,21 @@
                     <div class="carousel-item active">
                         <img class="img-responsive " src="img/slider/1.jpg" alt="First slide" width="100%" height="500">
                         <div class="carousel-caption d-none d-md-block texto-negro">
-                            <h5>Lorem ipsum dolor.</h5>
+                            <h5>Titulo Banner.</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, unde?</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="img-responsive " src="img/slider/2.jpg" alt="Second slide" width="100%" height="500">
                         <div class="carousel-caption d-none d-md-block texto-negro">
-                            <h5>Lorem ipsum dolor.</h5>
+                            <h5>Titulo Banner.</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, unde?</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img class="img-responsive " src="img/slider/3.jpg" alt="Third slide" width="100%" height="500">
                         <div class="carousel-caption d-none d-md-block texto-negro">
-                            <h5>Lorem ipsum dolor.</h5>
+                            <h5>Titulo Banner.</h5>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, unde?</p>
                         </div>
                     </div>
@@ -74,9 +75,100 @@
                 </a>
             </div>
         </div>
-    </main>
-    <footer class="footer">
 
+
+        <section class="container  pt-5" >
+            <h2 class="text-center pb-5" id="como-funciona">
+                Como Funciona
+            </h2>
+            <div class="row d-flex">
+                <div class="col-sm-6 d-flex justify-content-center">
+                    <img src="img/img-fake.png" alt="Imagen" width="75%" height="400">
+                </div>
+                <div class="col-sm-6 align-self-center">
+                    <div class="d-flex">
+                        <div class="d-flex flex-column">
+                            <h5 class="text-center">Special title treatment</h5>
+                            <p class="card-text text-justify">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Architecto aut autem consequuntur ea et id minus temporibus. Ipsa libero
+                                minima omnis optio voluptatum? Dolorum illo quod suscipit. Amet consectetur
+                                dolorem eaque, eos, facilis hic illo laudantium nulla repellendus,
+                                repudiandae voluptas!</p>
+                            <div class="d-flex justify-content-center">
+                                <a href="#" class="btn btn-primary">Registrarse</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h2 class="text-center mt-5 pt-5" id="nosotros">
+                Nosotros
+            </h2>
+            <div class="row pt-5 mb-5">
+                <div class="col-sm-12">
+                    <div class="row">
+                        <div class="col-sm-6 ">
+                            <h5 class="text-center">Special title treatment</h5>
+                            <p class="text-justify">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Architecto aut autem consequuntur ea et id minus temporibus. Ipsa libero
+                                minima omnis optio voluptatum? Dolorum illo quod suscipit. Amet consectetur
+                                dolorem eaque, eos, facilis hic illo laudantium nulla repellendus,
+                                repudiandae voluptas!
+                            </p>
+                        </div>
+                        <div class="col-sm-6 d-flex justify-content-center">
+                            <img src="img/img-fake.png" alt="Imagen" width="75%" height="200">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 pt-5">
+                    <div class="row">
+                        <div class="col-sm-6 d-flex justify-content-center">
+                            <img src="img/img-fake.png" alt="Imagen" width="75%" height="200">
+                        </div>
+                        <div class="col-sm-6 ">
+                            <h5 class="text-center">Special title treatment</h5>
+                            <p class="text-justify">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Architecto aut autem consequuntur ea et id minus temporibus. Ipsa libero
+                                minima omnis optio voluptatum? Dolorum illo quod suscipit. Amet consectetur
+                                dolorem eaque, eos, facilis hic illo laudantium nulla repellendus,
+                                repudiandae voluptas!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <footer class="footer row w-100 d-flex flex-fill m-0">
+        <div class="col-sm-12 w-100">
+            <div class="row">
+                <div class="col-sm-12 d-flex flex-fill justify-content-center">
+                    <a href="#" class="nav-link icono-32">
+                        <i class="fab fa-facebook-square text-black"></i>
+                    </a>
+                    <a href="#" class="nav-link icono-32">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                    <a href="#" class="nav-link icono-32">
+                        <i class="fab fa-twitter-square"></i>
+                    </a>
+                    <a href="#" class="nav-link icono-32">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
+                </div>
+            </div>
+            <div class="row pt-3">
+                <div class="col-sm-12 bg-success">
+                    <div class="d-flex justify-content-center">
+                        <p><span class="text-32 text-white">© Copyright 1998-2016 Nombre Empresa Todos los derechos reservados.</span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 
 <script src="js/jquery.min.js"></script>
