--- a/registro.html
+++ b/registro.html
@@ -34,7 +34,37 @@
     </nav>
 </header>
     <main class="contenido">
+        <div class="container w-75">
+            <div class="row m-5">
+                <div class="col-sm-12 d-flex justify-content-center">
+                    <h3 class="text-size-50">Registro</h3>
+                </div>
+            </div>
+            <div class="row m-5">
+                <div class="form-group col-sm-6 mt-3">
+                    <input type="text" class="form-control" name="txtdni" id="txtdni" placeholder="Nro de DNI">
+                </div>
+                <div class="form-group col-sm-6 border-primary">
+                    <h5>Contrato</h5>
+                    <div class="d-flex justify-content-center ">
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                            <label class="form-check-label" for="inlineRadio1"> Con Contrato</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                            <label class="form-check-label" for="inlineRadio2">Sin Contrato</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row ml-5">
+                <div class="form-group col-sm-6">
+                    <input type="text" class="form-control" name="txtnombre" id="txtnombre" placeholder="Nombres">
+                </div>
+            </div>
 
+        </div>
     </main>
 <footer class="footer row w-100 d-flex flex-fill m-0">
     <div class="col-sm-12 w-100">
