--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li class="nav-item"><a href="index.html" class="nav-link"><span class="text-white">Inicio</span></a></li>
                     <li class="nav-item"><a href="#como-funciona" class="nav-link"><span class="text-white">Como Funciona</span></span></a></li>
                     <li class="nav-item"><a href="#nosotros" class="nav-link"><span class="text-white">Nosotros</span></a></li>
-                    <li class="nav-item"><a href="#" class="nav-link"><span class="text-white">Contactanos</span></a></li>
+                    <li class="nav-item"><a href="contacto.html" class="nav-link"><span class="text-white">Contactanos</span></a></li>
                 </ul>
             </div>
             <div class="justify-content-end">
