cambios en las plantillas
1.- mejorado el index de administracion
2.- agregado nueva plantilla para listar administradores

--- a/AdminPlantilla/administracion.html
+++ b/AdminPlantilla/administracion.html
@@ -25,10 +25,10 @@
                     <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Inicio</a>
+                    <a href="administracion.html" class="nav-link">Inicio</a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Administradores</a>
+                    <a href="administracion-Administradores.html" class="nav-link">Administradores</a>
                 </li>
                 <li class="nav-item d-none d-sm-inline-block">
                     <a href="#" class="nav-link">Alumnos</a>
@@ -86,7 +86,7 @@
             <a href="index3.html" class="brand-link">
                 <img src="img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
                      style="opacity: .8">
-                <span class="brand-text font-weight-light">AdminLTE 3</span>
+                <span class="brand-text font-weight-light">Sistema Examenes</span>
             </a>
 
             <!-- Sidebar -->
@@ -97,7 +97,7 @@
                         <img src="img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Alexander Pierce</a>
+                        <a href="#" class="d-block">Nombre de Usuario</a>
                     </div>
                 </div>
 
@@ -109,8 +109,7 @@
                             <a href="pages/widgets.html" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
-                                    Widgets
-                                    <span class="right badge badge-danger">New</span>
+                                    Cursos de Examenes
                                 </p>
                             </a>
                         </li>
@@ -118,8 +117,7 @@
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-copy"></i>
                                 <p>
-                                    Layout Options
-                                    <span class="badge badge-info right">6</span>
+                                    Tipos de Examenes
                                 </p>
                             </a>
                         </li>
@@ -127,13 +125,13 @@
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
                                 <p>
-                                    Charts
+                                   Temas de Preguntas
                                 </p>
                             </a>
                         <li class="nav-item">
                             <a href="pages/charts/chartjs.html" class="nav-link">
                                 <i class="far fa-circle nav-icon"></i>
-                                <p>ChartJS</p>
+                                <p>Examenes</p>
                             </a>
                         </li>
 
@@ -141,8 +139,7 @@
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-tree"></i>
                                 <p>
-                                    UI Elements
-                                    <i class="fas fa-angle-left right"></i>
+                                    Preguntas de Examenes
                                 </p>
                             </a>
                         </li>
@@ -150,17 +147,7 @@
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-edit"></i>
                                 <p>
-                                    Forms
-                                    <i class="fas fa-angle-left right"></i>
-                                </p>
-                            </a>
-                        </li>
-                        <li class="nav-item has-treeview">
-                            <a href="#" class="nav-link">
-                                <i class="nav-icon fas fa-table"></i>
-                                <p>
-                                    Tables
-                                    <i class="fas fa-angle-left right"></i>
+                                    Examenes Resueltos
                                 </p>
                             </a>
                         </li>
@@ -175,16 +162,57 @@
                 <div class="container-fluid">
                     <div class="row mb-2">
                         <div class="col-sm-6">
-                            <h1 class="m-0 text-dark">Dashboard</h1>
-                        </div><!-- /.col -->
-                        <div class="col-sm-6">
-                            <ol class="breadcrumb float-sm-right">
-                                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                                <li class="breadcrumb-item active">Dashboard v1</li>
-                            </ol>
+                            <h1 class="m-0 text-dark">Bienvenido</h1>
                         </div><!-- /.col -->
                     </div><!-- /.row -->
                 </div><!-- /.container-fluid -->
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="card  ">
+                            <div class="card-body">
+                                <h2 >Administracion del sistema</h2>
+
+                                <p class="card-text text-justify p-3">
+                                    Some quick example text to build on the card title and make up the bulk of the card's
+                                    content.
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab fugit nihil voluptates?
+                                    Aspernatur deleniti doloribus excepturi neque! Exercitationem, ipsum, iure.
+                                    Some quick example text to build on the card title and make up the bulk of the card's
+                                    content.
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab fugit nihil voluptates?
+                                    Aspernatur deleniti doloribus excepturi neque! Exercitationem, ipsum, iure.
+                                </p>
+
+                                <a href="#" class="btn btn-primary">Ayuda</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 d-flex justify-content-center">
+                        <div class="card w-50">
+                            <div class="card-body">
+                                <h2 >Información del Sistema</h2>
+
+                                <p class="card-text text-justify ">
+                                    Nombre del Sistema:		SistemaExamenes
+                                </p>
+                                <p class="card-text text-justify ">
+                                    Version:		1.0
+                                </p>
+                                <p class="card-text text-justify ">
+                                    Desarrolladores:	Tal y Tal
+                                </p>
+                                <p class="card-text text-justify ">
+                                    Fecha de la ultima Actualizacion:	01/12/2019
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <footer class="main-footer">
